caryayoga finish intro

--- a/intro.tex
+++ b/intro.tex
@@ -530,40 +530,39 @@ The Jñānayoga of Sundardās (SYP 4.13-24) is similar to the Jñānayoga of Rā
 \section{3. Caryāyoga}
 \label{caryayogaintro}
 
-Caryāyoga besetzt den dritten Platz in Rāmcandra's Liste, ist abwesend in der \textit{Yogasvarodaya}, an zweiter Stelle bei Nārāyaṇatīrtha und ebenfalls abwesend bei Sundardās. Allerdings beschriebt Sundardās ein Yoga mit der nahezu homophonen Bezeichnung Carcāyoga, welches hier dem Vergleich unterzogen wird, um festzustellen, ob eine Verbindung zwischen den beiden Konzepten besteht.
+Caryāyoga occupies third place in Rāmcandra's list, is absent in the \textit{Yogasvarodaya}, in second place in Nārāyaṇatīrtha, and also absent in Sundardās. However, Sundardās describes a Yoga with the almost homophonic name Carcāyoga, which will be compared in the following to determine whether there is a connection between the two concepts.
 
 \subsection{Caryāyoga in the \textit{Yogatattvabindu}}
 
-Rāmacandra hält den Abschnitt über Caryāyoga (Sektion \uproman{18}) mit nur acht Prosasätzen äußerst kurz. Nach einer Charakterisierung des Selbst als `formlos, permanent, unbeweglich und unteilbar', lässt Rāmacandra den Leser wissen, dass durch Stabilisierung des Geistes in einem solchen Selbst, das Selbst nicht in Kontakt mit Sünde und Verdienst kommt. Wenn der Geist ins formlose [Selbst] absorbiert ist, dann ist dies Cāryayoga. Mehr sagt, Rāmacandra zu diesem Thema nicht. Die Kürze der Passage und der Fakt, dass Rāmacandra's Textvorlage, das \textit{Yogasvarodaya}, diesen Typus des Yoga nicht enthält, sondern Rāmacandra ihn eindeutig anhand einer Beschreibung von Rājayoga des \textit{Yogasvarodaya} konstruiert,\footnote{Cf. \textit{Yogatattvabindu} \uproman{18}, p. \pageref{caryayoga}.} lässt vermuten, dass Rāmacandra an dieser Stelle lediglich seiner eingangs erwähnten Liste gerecht werden wollte.\footnote{Man könnte bei dieser Vermutung das Argument anbringen, dass Rāmacandra dies möglicherweise dezidiert nicht getan hat, da sowieso nicht alle fünfzehn eingangs angekündigten Yogas im Verlauf seines Textes beschrieben werden. Ich vermute, dass dies dennoch ursprünglich seine Intention gewesen sein dürfte, Rāmacandra jedoch im Laufe der Abfassung seines Textes diesen Plan aufgrund von Inkonsistenzen in seiner Vorlage verwerfen musste.} Der Grund warum dieses Yoga den Namen Caryāyoga trägt wird anhand der Inhalte nicht klar. Die vordergründige Assoziation der ersten vier Yogas in Rāmacandra's und \textit{Yogasvarodaya}'s Liste mit den vier \textit{pāda}s der Śaiva Āgamas (\textit{kriyā}-, \textit{jñāna}-, \textit{caryā}- und \textit{yogapāda}) bietet auch keine überzeugende Lösung, da \textit{caryā°} in diesem Kontext nichts mit dem ursprünglichen rituellen Disziplin der śaivitischen Praktiken zu tun hat, wie es im \textit{caryāpada} eines Śaiva Āgamas der Fall wäre. Es ist daher unwahrscheinlich, dass es wirklich Yogaübende gegeben hat, die ein Caryāyoga praktizierten, welches mit der kurzen Beschreibung des Rāmacandra übereinstimmt. 
+Rāmacandra keeps the section on Caryāyoga (section \uproman{18}) extremely short, with only eight prose sentences. After characterising the self as 'formless, permanent, immovable and indivisible', Rāmacandra lets the reader know that by stabilising the mind in such a self, the self does not come into contact with sin and merit. When the mind is absorbed into the formless [self], this is Cāryayoga. This is all which Rāmacandra says on this subject. The brevity of the passage and the fact that Rāmacandra's source text, the \textit{Yogasvarodaya}, does not contain this type of Yoga, but Rāmacandra clearly constructs it on the basis of a description of Rājayoga of the \textit{Yogasvarodaya},\footnote{Cf. \textit{Yogatattvabindu} \uproman{18}, p. \pageref{caryayoga}} suggests that Rāmacandra merely wanted to do justice to his list mentioned at the beginning.\footnote{One could argue that Rāmacandra may not have done so, since not all fifteen Yogas announced at the beginning are described in the course of his text anyway. I suspect that this may nevertheless have been his original intention but that Rāmacandra discarded this intention while writing his text, perhaps due to inconsistencies in his source text}. It remains unclear why this Yoga with this particular description bears the name Caryāyoga. The apparent association of the first four Yogas in Rāmacandra's and \textit{Yogasvarodaya}'s list with the four \textit{pāda}s of the Śaiva Āgamas (\textit{kriyā}-, \textit{jñāna}-, \textit{caryā}- and \textit{yogapāda}) does not offer a convincing solution in this case, as \textit{caryā°} in this context has nothing to do with the original ritual discipline of the śaivite practices, as would be the case in the \textit{caryāpada} of a Śaiva Āgamas. It is, therefore, unlikely that any Yoga practitioners practised a Caryāyoga that corresponds to the brief description of Rāmacandra. 
 
 \subsection{Caryāyoga in the \textit{Yogasvarodaya}}
 
-Der Begriff Caryāyoga ist in den mir vorliegenden Quellen des \textit{Yogasvarodaya}, nämlich \textit{Prāṇatoṣinī} und \textit{Yogakarṇikā} nicht vorhanden. Der Begriff Caryāyoga fällt in der Taxonomie der Yogakategorien im \textit{Yogasvarodaya}\footnote{\textit{Prāṇatoṣiṇī} Ed. p. 831.} nicht. Die Verse, welche die Yogataxonmie betreffen postulieren zwar eine Gesamtzahl von fünfzehn Yogas, von diesen werden jedoch nur insgesamt acht genannt. Ob Caryāyoga einfach nur unerwähnt blieb ist unklar, aber dessen Vorhandensein in den Taxonomien des \textit{Yogatattvabindu}\footnote{\textit{Yogatattvabindu} I. ll. 1-4.} und der \textit{Yogasiddhāntacandrikā}\footnote{\textit{Yogasiddhāntacandrikā} Ed. p. 2.} lässt dessen Zugehörigkeit sicher als möglich, und durchaus als wahrscheinlich erscheinen. Wie das \textit{Yogasvarodaya} urpsrünglich ausgesehen hat, kann nur vermutet werden. Obwohl es fast so erscheint, als wäre das gesamte \textit{Yogasvarodaya} in der \textit{Prāṇatoṣiṇī} überliefert, so beinhaltet die \textit{Yogakarṇikā} einige Verse des \textit{Yogasvarodaya}, welche in der \textit{Prāṇatoṣinī} nicht überliefert sind.\footnote{Es ist auffällig, dass sich Rāmacandra's Prosaisierung nahezu auschließlich auf den von der \textit{Prāṇatoṣiṇī} zitierten Versen basieren.} Aus diesem Grund dürfte der Text umfangreicher gewesen sein und könnte tatsächlich ein Caryāyoga überliefert haben. Es ist wahrscheinlich, dass das \textit{Yogasvarodaya} der erste Text gewesen ist, welche die Taxonomie der fünfzehn Yogas nennt.\footnote{See p.\pageref{???} for a genereal description of the \textit{Yogasvarodaya}.} Wenn die Assoziation mit den vier \textit{pāda}s der Śaiva Āgamas von Autor des \textit{Yogasvarodaya} vorgenommen worden wäre, dann wäre ein Yoga, welches in Verbindung mit ritueller Disziplin der śaivitischen Praktiken in Verbindung steht, die naheliegendste Vermutung, wie ein solches Caryāyoga ausgesehen haben könnte. Tatsächlich finden sich in \textit{Yogakarṇikā} 1.23-61 unter der Überschrift \textit{dinacaryā} (`Tages [Ritual-] Verhalten') ausführliche Beschreibungen von täglichem yogischen Ritualverhalten. Es ist überraschend, dass ein großer Teil des ersten Kapitels (1.1-168) die Quelltexte der Verse nicht angegeben werden, zumal der Rest des ersten Kapitels und alle anderen Kapitel des Textes größtenteils Kompilationen von Zitaten bestehend aus Versen anderer Texte zu typischen yogischen Themen sind. Im der gesamten \textit{Yogakarṇikā} werden immer wieder größere Abschnitte des \textit{Yogasvarodaya} und anderer Texte mitsamt Referenz zitiert. Ist es möglich, dass Nāth Aghorānanda, der Autor der \textit{Yogakarṇikā}, auch hier auf Verse des \textit{Yogasvarodaya} zugegriffen hat? Zumindest im zweiten Teil des ersten Kapitels (1.169-280) sind immerhin 37 verse (1.244-280) mit Referenz aus dem \textit{Yogasvarodaya} übernommen worden und nachweisbar mindestens vier Verse ohne Referenz (1.210-213).\footnote{Die Verse von \textit{Yogakarṇikā} 1.244-280 und 1.210-213 sind alle ebenfalls in der der \textit{Prāṇatoṣiṇī}, Ed. pp. 832-833 und Ed. p. 831 überliefert.} Diese Frage wird sich ohne Handschriften des \textit{Yogasvarodaya} zwar nicht beantworten lassen, aber es ist durchaus möglich, dass sich innerhalb der ersten 168 Verse der \textit{Yogakarṇikā} weitere Verse des \textit{Yogasvarodaya} befinden. Nichtsdestotrotz, ist bis auf Weiteres eines der plausibelsten Szenarios, dass das ursprüngliche Caryāyoga in der Taxonomie der fünfzehn Yogas den Inhalten des \textit{dinacaryā}-Abschnittes der \textit{Yogakarṇikā} ähnelte. In diesem Abschntit geht es um tägliche rituelle Waschungen mit Mantrarezitation, Visualisierung und Meditation (1.23-36) und weitere rituelle Handlungen, wie rituelles Ankleiden, das Auftragen des sektarischen Zeichens (\textit{tilaka}) samt Zusammenführung der Haare zu einem Knoten (1.38), Opfergaben, und das hingebungsvolle Ausführen von Prostrationen vor der eigenen \textit{iṣṭadevatā} usw. (1.39-61).               
+The term Caryāyoga does not exist in the \textit{Yogasvarodaya} sources available to me, namely \textit{Prāṇatoṣinī} and \textit{Yogakarṇikā}. The term Caryāyoga does not appear in the taxonomy of Yoga categories in the \textit{Yogasvarodaya}\footnote{\textit{Prāṇatoṣiṇī} ed. p. 831.} Although the verses concerning the yogic taxonomy postulate a total of fifteen Yogas, only eight are mentioned. Whether Caryāyoga remained unmentioned is unclear, but its presence in the taxonomies of the \textit{Yogatattvabindu}\footnote{\textit{Yogatattvabindu} I. ll. 1-4.} and the \textit{Yogasiddhāntacandrikā}\footnote{\textit{Yogasiddhāntacandrikā} Ed. p. 2.} certainly makes its affiliation seem possible and quite probable. What the \textit{Yogasvarodaya} originally looked like can only be surmised. Although it almost seems as if the entire \textit{Yogasvarodaya} has been handed down in the \textit{Prāṇatoṣiṇī}, the \textit{Yogakarṇikā} contains several verses of the \textit{Yogasvarodaya} which have not been handed down in the \textit{Prāṇatoṣinī}. \footnote{It is striking that Rāmacandra's prosaisation is based almost exclusively on the verses quoted by the \textit{Prāṇatoṣiṇī}.} For this reason, the text may have been more extensive and could have transmitted a Caryāyoga. The \textit{Yogasvarodaya} was likely the first text to mention the taxonomy of the fifteen yogas.\footnote{See p.\pageref{???} for a genereal description of the \textit{Yogasvarodaya}.} If the association with the four \textit{pāda}s of the Śaiva Āgamas had been made by the author of the \textit{Yogasvarodaya}, then a yoga related to the ritual discipline of śaivite practices would be the most obvious suggestion of what such a Caryāyoga might have looked like. Indeed, in \textit{Yogakarṇikā} 1.23-61 under the heading \textit{dinacaryā} (`daily [ritual] behaviour'), there are detailed descriptions of daily yogic ritual behaviour. It is surprising that for a large part of the first chapter (1.1-168), the source texts of the verses are not given, especially since the rest of the first chapter and all other chapters of the text are largely compilations of quotations consisting of verses from other texts on typical yogic topics. Throughout the \textit{Yogakarṇikā}, larger sections of the \textit{Yogasvarodaya} and other texts are repeatedly quoted with reference. Is it possible that Nāth Aghorānanda, the author of the \textit{Yogakarṇikā}, also drew on verses from the \textit{Yogasvarodaya} here? At least in the second part of the first chapter (1.169-280), 37 verses (1.244-280) have been taken from the \textit{Yogasvarodaya} with reference and demonstrably at least four verses without reference (1.210-213).\footnote{The verses of \textit{Yogakarṇikā} 1.244-280 and 1.210-213 are all also found in the \textit{Prāṇatoṣiṇī}, ed. pp. 832-833 and ed. p. 831}. This question cannot be answered without manuscripts of the \textit{Yogasvarodaya}. However, there may be further verses of the \textit{Yogasvarodaya} within the first 168 verses of the \textit{Yogakarṇikā}. Nonetheless, for the time being, one of the most plausible scenarios is that the original Caryāyoga in the taxonomy of the fifteen Yogas was similar to the contents of the \textit{dinacaryā} section of the \textit{Yogakarṇikā}. This section deals with daily ritual ablutions with mantra recitation, visualisation and meditation (1.23-36) and other ritual acts such as ritual dressing, the application of the sectarian sign (\textit{tilaka}) including tying the hair into a knot (1.38), offerings, and the devotional performance of prostrations in front of one's own \textit{iṣṭadevatā} etc. (1.39-61).               
 
 \subsection{Caryāyoga in the \textit{Yogasiddhāntacandrikā}}
 
-In seiner \citetitle{yogacandrika}\footnote{\citetitle{yogacandrika}, Ed. pp. 2, 52-53, 100-101, 150.} präsentiert Nārāyaṇatīrtha Caryāyoga\footnote{For an earlier brief discussion of Caryāyoga in Nārāyaṇatīrtha's \textit{yogacandrika} see \citeauthor{penna2004}, 2004: 66-67.} im Kontext von Yogasūtra 1.33:
+In his \citetitle{yogacandrika}\footnote{\citetitle{yogacandrika}, ed. pp. 2, 52-53, 100-101, 150.} Nārāyaṇatīrtha presents Caryāyoga\footnote{For an earlier brief discussion of Caryāyoga in Nārāyaṇatīrtha's \textit{yogacandrika} see \citeauthor{penna2004}, 2004: 66-67.} in the context of Yogasūtra 1.33:
 
 \begin{quote}
-  Due to impurities of the mind like jealousy etc. preventing the attainment of yoga, the method of removing them is Caryāyoga - Purity of the mind arises through the cultivation of friendliness, compassion, joy and equanimity in circumstances of happiness, suffering, virtue and vice.\footnote{\citetitle{yogacandrika}, Ed. p. 52 (\textit{tasya cittasyāsūyādimalavato yogāsambhavāt tannirāsopāyaṃ caryāyogam āha- maitrīkaruṇāmuditopekṣāṇāṃ sukhaduḥkhapuṇyāpuṇyaviṣayāṇāṃ bhāvanātaścittaprasādanam} || 33 ||)} 
+  Due to impurities of the mind like jealousy, etc., preventing the attainment of Yoga, the method of removing them is Caryāyoga - Purity of the mind arises through the cultivation of friendliness, compassion, joy and equanimity in circumstances of happiness, suffering, virtue and vice. \footnote{\citetitle{yogacandrika}, Ed. p. 52 (\textit{tasya cittasyāsūyādimalavato yogāsambhavāt tannirāsopāyaṃ caryāyogam āha- maitrīkaruṇāmuditopekṣāṇāṃ sukhaduḥkhapuṇyāpuṇyaviṣayāṇāṃ bhāvanātaścittaprasādanam} || 33 ||)} 
   \end{quote}
   
- Caryāyoga besteht darin gegenüber denjenigen in glücklichen Umständen sind Freundlichkeit zu kultivieren, um Eifersucht zu verhindern. Gegenüber denjenigen, die sich in leidvollen Umständen sich befinden soll Mitgefühl kultiviert werden, um groll zu verhindern. Gegenüber denjenigen, die tugendhaft handeln, soll man Freude kultivieren, um Abneigung zu verhindern; und gegenüber denjenigen, die untugendhaft handeln, soll man Gleichmut kultivieren, um Verärgerung zu verhindern.\footnote{Cf. ibid. (\textit{tathā ca sukhiteṣu maitrīṃ sauhārdam īrṣyākāluṣyanivarttakaṃ, duḥkhiṣu karuṇāṃ dayāmasūyākāluṣyanivarttikāṃ, puṇyavṛttiṣu harṣaṃ dveṣanivarttakam, apuṇyaśabditapāpiṣu upekṣām amarṣakāluṣyanivarttikāṃ bhāvayet} |)}        
+Caryāyoga is to cultivate kindness towards those in fortunate circumstances to prevent jealousy. Towards those who are in sorrowful circumstances, compassion is supposed to be cultivated to prevent ill-will. Towards those who act virtuously, one is supposed to cultivate joy to prevent aversion; and towards those who act unvirtuously, one is supposed to cultivate equanimity to prevent anger.\footnote{Cf. Ibid. (\textit{tathā ca sukhiteṣu maitrīṃ sauhārdam īrṣyākāluṣyanivarttakaṃ, duḥkhiṣu karuṇāṃ dayāmasūyākāluṣyanivarttikāṃ, puṇyavṛttiṣu harṣaṃ dveṣanivarttakam, apuṇyaśabditapāpiṣu upekṣām amarṣakāluṣyanivarttikāṃ bhāvayet} |)}        
 
- Mittles dieser Praxis des Caryāyoga, welche graduell den Geist reinigt, wird die sattvische Natur des Geistes hervorgebracht. Dies führt zu einem klaren und gelassenen Geist.\footnote{Cf. \citetitle{yogacandrika}, Ed. pp. 52-53 (\textit{tad evaṃ caryāyogena cittamalanirāsakena mukhyādiṣu yathākramamuktabhāvanārūpeṇa sāttviko dharmo jāyate} | \textit{tena ca śuklena dharmeṇa cittaṃ prasannaṃ bhavati} | \textit{prasāde ca sthitipadaṃ labhate} | \textit{etacca puṣkalaṃ viraktasyaiva sambhavatīti mukhyacaryāyogo vairāgyameveti saṃkṣepaḥ} || 33 ||)}
+ With this practice of Caryāyoga, which gradually purifies the mind, the sattvic nature of the mind is brought forth. This leads to a clear and serene mind.\footnote{Cf. \citetitle{yogacandrika}, ed. pp. 52- 53 (\textit{tad evaṃ caryāyogena cittamalanirāsakena mukhyādiṣu yathākramamuktabhāvanārūpeṇa sāttviko dharmo jāyate} | \textit{tena ca śuklena dharmeṇa cittaṃ prasannaṃ bhavati} | \textit{prasāde ca sthitipadaṃ labhate} | \textit{etac ca puṣkalaṃ viraktasyaiva sambhavatīti mukhyacaryāyogo vairāgyameveti saṃkṣepaḥ} || 33 ||)}
 
- Da das Wort \textit{caryā°} in diesem Kontext auf ein zielgerichtetes Verhalten verweist, welches darauf ausgelegt ist, die sattvische Natur entstehen zu lassen kann das Caryāyoga der \textit{Yogasiddhāntacandrikā} sinnvoll als `Yoga des Verhaltens' übersetzt werden.  
+ Since the word \textit{caryā°} in this context refers to purposeful behaviour designed to give rise to the sattvic nature, the Caryāyoga of the \textit{Yogasiddhāntacandrikā} can be meaningfully translated as 'Yoga of behaviour'.  
 
 \subsection{Carcāyoga in the \textit{Sarvāṅgayogapradīpikā}}
 
-Within \citetitle{sarvangayoga} (2.40-51, Ed. pp. 96-98) Sundardās describes Cārcāyoga as a type of Bhaktiyoga which is \textit{bhakti} towards unmanifest consciousness (\textit{avyakta puruṣa}) in delightful devotion.\footnote{See \citeauthor{burger2014sarvangayogapradipika} (2014: 694-695) for an earlier brief discussion of Sundardās's Carcāyoga in French.} He extensively describes the unmanifest consciousness (\textit{avyakta puruṣa}) as being formless and eternal and so on (40), as beginningless and endless, and so on (41). Next, Sundardās describes the various layers of creation emanating from \textit{oṃ} (42-45). He says the unmanifest consciousness illuminates every corner of existence (46), being the inner knower of all (47). Then, Sundardās expresses the importance of deep awe towards the infinite, divine, all-knowing and incomprehensible (48-49) unmanifest consciousness.
+Within \citetitle{sarvangayoga} (2.40-51, Ed. pp. 96-98), Sundardās describes Cārcāyoga as a type of Bhaktiyoga which is \textit{bhakti} towards unmanifest consciousness (\textit{avyakta puruṣa}) in delightful devotion. \footnote{See \citeauthor{burger2014sarvangayogapradipika} (2014: 694-695) for an earlier brief discussion of Sundardās's Carcāyoga in French}. He extensively describes the unmanifest consciousness (\textit{avyakta puruṣa}) as being formless and eternal and so on (40), as beginningless and endless, and so on (41). Next, Sundardās describes the various layers of creation emanating from \textit{oṃ} (42-45). He says the unmanifest consciousness illuminates every corner of existence (46), being the inner knower of all (47). Then, Sundardās expresses the importance of deep awe towards the infinite, divine, all-knowing and incomprehensible (48-49) unmanifest consciousness.
 
-Die gesamte Passage über Carcāyoga ist vor allem durch Diskussion und Beschreibung vom unmanifestierten Bewusstsein (\textit{avyakta puruṣa}) gekennzeichnet. Und genau dieser Aspekt ist der Kern dieser Art des Yoga. Das unlimitierte unmanifestierten Bewusstsein ist eigentlich in limitierende Worte zu fassen und dennoch ist der Übende mit der Frage konfrontiert, wie es definiert und bestimmt werden soll.\footnote{Cf. \citetitle{sarvangayoga} 2.41ab (\textit{avyakta puruṣa agama apārā} | \textit{kaisaiṃ kai kariye nirddhārā} |} Und genau dies ist die Praxis des \textit{carcāyoga}. Der Begriff \textit{carcā°} bezieht sich hier auf das diskutieren, auf das in Worte fassen, und auf das hervorheben einzelner Details des unmanifestierten Bewusstseins zur Erzeugung von tiefer Ehrfurcht zur Kultivierung von Bhaktiyoga, dem Yoga durch hingebungsvolle Verehrung von \textit{avyakta puruṣa}. Dies verdeutlich vor allem der folgende Vers:
+The entire passage on Carcāyoga is characterised by a discussion and description of the unmanifest consciousness (\textit{avyakta puruṣa}). This aspect is the core of this type of Yoga. Unlimited unmanifested consciousness can be put into limiting words only, and yet the practitioner is confronted with the question of how it is supposed to be defined and determined.\footnote{Cf. \citetitle{sarvangayoga} 2.41ab (\textit{avyakta puruṣa agama apārā} \textit{kaisaiṃ kai kariye nirddhārā} |} And this is precisely the practice of Carcāyoga. The term \textit{carcā°} here refers to discussing, putting into words, and emphasising individual details of unmanifest consciousness to generate deep reverence for the cultivation of Bhaktiyoga, the Yoga of devotional worship of \textit{avyakta puruṣa}. The following verse illustrates this:
 \begin{quote}
-How to discuss, where to find you, O Lord? You are the inner knower of everything. There is no end describing creation. Your limit cannot be reached by any means.\footnote{Cf. \citetitle{sarvangayoga} 2.47 (\textit{carcā karaiṃ kahāṃ laga svamī} | \textit{tum saba hī ke antarjāmī} | \textit{sṛṣṭi kahat kachu anta na āvai} | \textit{terā pāra kaiṃna dhaiṃ pāvai} || 47 ||} \end{quote}
+How to discuss, where to find you, O Lord? You are the inner knower of everything. There is no end to describing creation. Your limit cannot be reached by any means.\footnote{Cf. \citetitle{sarvangayoga} 2.47 (\textit{carcā karaiṃ kahāṃ laga svamī} | \textit{tum saba hī ke antarjāmī} | \textit{sṛṣṭi kahat kachu anta na āvai} | \textit{terā pāra kaiṃna dhaiṃ pāvai} || 47 ||} \end{quote}
 
-Somit wird klar, dass keine direkte konzeptionelle Verbindung zwischen den zuvor beschriebenen Caryāyogas und dem Carcāyoga besteht. Eine sinnvolle Erklärung für die auffällige Homophonie beider Begriffe, kann bis auf Weiteres nicht geboten werden.  
-
+Thus, it is clear that no direct conceptual connection exists between the Caryāyogas described above and Carcāyoga. A meaningful explanation for the conspicuous homophony of both terms cannot be offered for the time being.  
 
 \end{document}
 
